Added share Floating action button Added navigation drawer Added circular image view Added settings activity

--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -12,4 +12,20 @@
         <item name="theme">@style/ThemeOverlay.AppCompat.Dark.ActionBar</item>
     </style>
 
+    <style name="CustomCheckBox">
+        <item name="android:theme">@style/CheckBoxAppTheme</item>
+    </style>
+
+    <style name="CheckBoxAppTheme">
+        <item name="android:colorAccent">
+            @color/accent
+        </item>
+        <item name="android:colorControlNormal">
+            @color/theme_primary
+        </item>
+        <item name="android:colorControlHighlight">
+            @color/theme_dark_primary
+        </item>
+    </style>
+
 </resources>
