--- a/app/src/main/res/layout/cardview_row.xml
+++ b/app/src/main/res/layout/cardview_row.xml
@@ -25,6 +25,7 @@
 
         <CheckBox
             android:id="@+id/chkSelected"
+            style="@style/CustomCheckBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
