--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -31,7 +31,7 @@
             android:layout_alignParentLeft="true"
             android:layout_margin="5dp"
             android:background="#279d25"
-            android:text="@string/show_selected"
+            android:text="@string/Download"
             android:textColor="@color/TextPrimaryColor" />
 
         <Button
